welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  var h : Int = getMondehauteur()
  var i : Int = 0
  var T :array [color](h)
  for (i<- 0 to h-1){
    avance()
    T(i)=getCouleurSol()
    
  }
  for (i<- 0 to h-1){
    avance()
    droite()
    avance()
    droite()
    avance()
    setCouleurBrosse(T(i))
    baisseBrosse
  }
}
